JP GENERATION - SOME CHANGES

--- a/plne-responzivny-web/jpgeneration/cennik/cena-sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-sprava-domeny-a-hostingu.html
@@ -281,6 +281,70 @@
 </section>
 <br>
 <br>
+<!-------------FAQ-------------->
+<section class="faq">
+    <div class="faq-cointainer">
+        <div class="faq-photo">
+            <img alt="foto produkcia" src="../../image/faq/faq-spravadomenyahostingu.webp">
+        </div>
+        <div class="faq-content">
+            <div class="faq-headline">
+                <header class="headline-con">
+                    <div class="con-main">
+                        <div class="line-con1"></div>
+                        <div class="spacer"></div>
+                    </div>
+                    <h2>Informácie</h2>
+                </header>
+                <div class="con-look-ser-faq">
+                    <span>Často kladené otázky (FAQ)</span>
+                </div>
+                <div class="skill-text">
+                    Informácie a odpovede na najčastejšie otázky od našich zákazníkov.
+                </div>
+            </div>
+            <div class="faq-menu">
+                <div class="menu-1">
+                    <button class="accordion"><span class="btn-text">Ako sa stanovujú ceny za vaše služby a aké faktory na to vplývajú?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Ceny za naše služby sa určujú na základe niekoľkých faktorov, vrátane rozsahu práce, komplexnosti projektu, požadovaných funkcií a dodatočných služieb. Využívame transparentný a spravodlivý cenový model, ktorý zohľadňuje tieto faktory, aby sme vám poskytli presné a konkurencieschopné ceny.</p>
+                    </div>
+                </div>
+                <div class="menu-2">
+                    <button class="accordion"><span class="btn-text">Existuje možnosť individuálnej dohody o cene za vaše služby?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Áno, sme otvorení diskusii o individuálnych cenových dohodách. Ak máte špecifické požiadavky alebo potreby, môžeme spoločne preskúmať možnosti a prispôsobiť cenu tak, aby vyhovovala vašim konkrétnym požiadavkám. Kontaktujte nás a radi vám poskytneme ďalšie informácie.</p>
+                    </div>
+                </div>
+                <div class="menu-3">
+                    <button class="accordion"><span class="btn-text">Ako sa môžem kvalifikovať na získanie zľavy a kde ich nájdem?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Ponúkame rôzne možnosti získania zľavy pre našich klientov. Môžu sa jednať o sezónne akcie, vernostné programy, odporúčania nových zákazníkov alebo špeciálne ponuky pre opakujúcich sa klientov. Sledujte našu webovú stránku alebo prihláste sa na odber nášho newsletteru, aby ste sa dozvedeli o aktuálnych zľavách a ponukách.</p>
+                    </div>
+                </div>
+                <div class="menu-4">
+                    <button class="accordion"><span class="btn-text">Aké sú platobné možnosti v rámci vašich poskytovaných služieb?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Pre vašu pohodlnosť a flexibilitu ponúkame rôzne možnosti platby. Medzi bežné spôsoby patria platby bankovým prevodom, platba v hotovosti a online platobné systémy. V prípade dlhodobých projektov môžeme diskutovať aj o možnostiach splátkového kalendára alebo stanovení termínov platby, aby sme vyhoveli vašim individuálnym finančným potrebám.</p>
+                    </div>
+                </div>
+                <div class="menu-5">
+                    <button class="accordion"><span class="btn-text">Máte možnosť poskytnúť odhad nákladov pred začatím projektu?</span>
+                    </button>
+                    <div class="panel">
+                        <p>Áno, sme schopní poskytnúť odhad nákladov pred začatím projektu. Na základe vašich požiadaviek a špecifikácií projektu vám môžeme vypracovať predbežný odhad, ktorý vám poskytne hrubý prehľad o očakávaných nákladoch. Tento odhad je však len orientačný a konečné náklady môžu byť ovplyvnené ďalšími faktormi a zmenami počas priebehu projektu. Pre presnejšie stanovenie cien odporúčame osobnú konzultáciu a detailnejšiu analýzu vašich potrieb.</p>
+                    </div>
+                </div>
+        </div>
+    </div>
+    </div>
+</section>
+<br>
+<br>
 <!-------------FOOTER-------------->
 <footer>
     <section class="main">
