JP GENERATION - SOME CHANGES

--- a/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
@@ -114,7 +114,8 @@
                 <div class="about-text">
                     <div class="spacer-img-b"></div>
                     <h3 class="about-h3">Práca</h3>
-                    <h6 class="about-h6">Našou prácou je dosiahnuť spokojnosť zákazníka v digitálnom svete</h6>
+                    <h6 class="about-h6">Stavia na porozumení vašej vízie a cieľov. Spájame moderné technológie s naším know-how, aby sme vytvorili digitálne riešenia, ktoré vás budú reprezentovať a pomôžu vám dosiahnuť úspech.
+                    </h6>
                 </div>
             </div>
             <div class="container-about-col">
@@ -123,7 +124,7 @@
                     <div class="about-text-2">
                         <div class="spacer-img-b2"></div>
                         <h3 class="about-h3">Filozofia digitálnej generácie</h3>
-                        <h6 class="about-h6">Dôvera a poctivosť sa vypláca</h6>
+                        <h6 class="about-h6">Založená na princípoch dôvery a poctivosti. Veríme, že tieto hodnoty sú kľúčové pre dlhodobé a úspešné vzťahy so našimi klientmi.</h6>
                     </div>
                 </div>
                 <div class="container-about-row">
@@ -141,16 +142,15 @@
         <div class="who-container">
             <div>
                 <h4 class="who-h">KTO SME</h4>
-                <p class="who-p">Sme začínajúci web so 4 ročnou praxou služieb ktoré poskytujeme. Nie sme reklamná
-                    agentúra ani fotoštúdio jednoducho sme digitálna generácia… </p>
+                <p class="who-p">Vítame vás v našej digitálnej generácii, kde kombinujeme mladý a talentovaný tím s bohatými skúsenosťami v poskytovaní širokého spektra digitálnych služieb. Nezakladáme sa na jednej konkrétnej oblasti, pretože sme presvedčení, že digitálny svet ponúka nekonečné možnosti a my sme tu, aby sme vám ich priniesli...</p>
             </div>
             <div class="border-who">
                 <h4 class="who-h">NAŠA VÍZIA</h4>
-                <p class="who-p">Posunúť digitálny svet na vyšší level.</p>
+                <p class="who-p">Naša vášňou a túžbou je posunúť digitálny svet na vyšší level. Sme presvedčení, že moderné technológie a naše know-how majú potenciál priniesť inovácie a zmeniť spôsob, akým ľudia komunikujú a podnikajú online. Chceme byť hnacou silou za týmto posunom a vytvoriť digitálne riešenia, ktoré vás budú reprezentovať a prinášať vám úspech.</p>
             </div>
             <div>
                 <h4 class="who-h">NAŠA MISIA</h4>
-                <p class="who-p">Spokojnosť a nadšenie zákazníka z odovzdanej služby od Nás.</p>
+                <p class="who-p">Sme tu pre vás s jediným cieľom: spokojnosť a nadšenie zákazníka. S každou odovzdanou službou sa zameriavame na to, aby sme vás prekvapili a nadchli. Pre nás je vaša spokojnosť prioritou, preto sa snažíme prinášať úžasné a inovatívne riešenia, ktoré vás vystavia v najlepšom svetle. Vaša úspešná digitálna prítomnosť je našou misiou, a preto pracujeme tvrdo, aby sme vám ju pomohli dosiahnuť.</p>
             </div>
         </div>
     </section>
@@ -164,7 +164,7 @@
         <h2>Náš tím</h2>
     </header>
     <div class="con-look">
-        <span>Ľudia ktorí zrealizujú Váš projekt</span>
+        <span>Skúsení tvorcovia, ktorí premenia vašu víziu na skutočnosť</span>
     </div>
     <section class="photo-team">
         <div class="container-cv">
