--- a/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
@@ -105,7 +105,12 @@
         <h2>Zákazníci</h2>
     </header>
     <div class="con-look">
-        <span>Firmy alebo značky ktoré využili naše služby</span>
+        <span>Firmy a značky, ktoré na nás spoliehajú a využili naše profesionálne služby</span>
+    </div>
+    <div class="zak-text">
+        Dokonalosť je neustálym úsilím. Nezakrývame, že sme odborníci na všetko na 100%. No práve táto skromnosť a
+        odhodlanie nás vyznačuje. Vždy sme pripravení sa učiť nové veci a prekvapiť vás. Preto, ak si myslíte, že
+        niečo nie je možné, vedzte, že pre nás to znamená len novú výzvu. Spolu objavíme, čo sme schopní dosiahnuť.
     </div>
     <section class="costumers">
         <div class="photo-content">
