--- a/plne-responzivny-web/jpgeneration/error/502.html
+++ b/plne-responzivny-web/jpgeneration/error/502.html
@@ -23,7 +23,7 @@
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>403 - JP GENERATION</title>
+    <title>502 - JP GENERATION</title>
     <link href="../../image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
     <link href="../../css/style.css" rel="stylesheet">
     <link href="../../css/media.css" rel="stylesheet">
@@ -102,10 +102,10 @@
             <div class="line-con1"></div>
             <div class="spacer"></div>
         </div>
-        <h2>403 - PRÍSTUP NEUDELENÝ</h2>
+        <h2>502 - ZLÁ BRÁNA</h2>
     </header>
     <div class="con-look">
-        <span>Tentoraz nie, vstup zakázaný!</span>
+        <span>Server zaznamenal dočasnú chybu a nemohol dokončiť vašu požiadavku</span>
     </div>
 </section>
 <section class="not-found">
