--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -134,7 +134,7 @@
 </section>
 <section class="form">
     <div class="form-row">
-        <form action="spracuj-formular.php" method="post">
+        <form action="kontakt-vdaka.php" method="post">
             <div class="form-wrap">
                 <label for="name">
                     <input id="name" maxlength="64" name="name" placeholder="Meno" required type="text">
@@ -143,9 +143,11 @@
                     <input id="lastname" maxlength="64" name="lastname" placeholder="Priezvisko" required type="text">
                 </label>
                 <label for="email">
-                    <input id="email" maxlength="64" name="email" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$" placeholder="E - mail"
+                    <input id="email" maxlength="64" name="email"
+                           pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
+                           placeholder="E - mail"
                            required
-                           type="text">
+                           type="email">
                 </label>
                 <label for="subject">
                     <input id="subject" maxlength="64" name="subject" placeholder="Predmet" required type="text">
@@ -167,26 +169,22 @@
             </div>
             <div class="form-wrap">
                 <label for="message">
-            <textarea id="message" maxlength="1400" minlength="5" name="message" placeholder="Vaša správa..."
-                      required
-                      type="text"></textarea>
+                    <textarea id="message" maxlength="1400" minlength="5" name="message" placeholder="Vaša správa..."
+                              required
+                              type="text"></textarea>
                 </label>
             </div>
             <div class="form-wrap">
-                <label for="chceckbox">
-                    <input id="chceckbox" name="checkbox" required type="checkbox"><a class="gdpr-ceck" href="gdpr.html"
-                                                                                      target="_blank">Súhlasim s
+                <label for="checkbox">
+                    <input id="checkbox" name="checkbox" required type="checkbox"><a class="gdpr-ceck" href="gdpr.html"
+                                                                                     target="_blank">Súhlasím s
                     GDPR</a>
                 </label>
             </div>
             <div class="form-wrap">
                 <label for="submit">
-                    <input class="submit-btn" id="submit" name="submit" onclick="toastFunction()" type="submit"
-                           value="ODOSLAŤ">
+                    <input class="submit-btn" id="submit" name="submit" type="submit" value="ODOSLAŤ">
                 </label>
-            </div>
-            <div id="toast">
-                Dostali sme vašu správu. Vďaka!
             </div>
         </form>
     </div>
@@ -328,7 +326,7 @@
     <!-------------COPYRIGHT-------------->
     <section class="copy-write">
         <div class="copy-box">
-            <p>Copyright © 2023. All rights reserved.</p>
+            <p>2023 © All rights reserved. Website by <a class="text-link" href="https://www.jpgeneration.sk">JP GENERATION</a>.</p>
         </div>
     </section>
 </footer>
@@ -338,7 +336,6 @@
 <script src="../js/nav.js" type="text/javascript"></script>
 <script src="../js/dropdown-nav.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
-<script src="../js/submit-alert.js" type="text/javascript"></script>
 </body>
 </html>
 
