--- a/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
@@ -377,7 +377,7 @@ Ake formáty a akú kvalitu videa poskytujeme pre rôzne platformy?</span>
     <!-------------COPYRIGHT-------------->
     <section class="copy-write">
         <div class="copy-box">
-            <p>Copyright © 2023. All rights reserved.</p>
+            <p>2023 © All rights reserved. Website by <a class="text-link" href="https://www.jpgeneration.sk">JP GENERATION</a>.</p>
         </div>
     </section>
 </footer>
