--- a/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
@@ -417,7 +417,7 @@
     <!-------------COPYRIGHT-------------->
     <section class="copy-write">
         <div class="copy-box">
-            <p>Copyright © 2023. All rights reserved.</p>
+            <p>2023 © All rights reserved. Website by <a class="text-link" href="https://www.jpgeneration.sk">JP GENERATION</a>.</p>
         </div>
     </section>
 </footer>
