--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -95,8 +95,8 @@
 <!-------------PHOTO SLIDER--------------->
 <section class="slider">
     <div class="slideshow-container">
-        <div class="text">Kreatívna myseľ, nekonečné možnosti</div>
-        <div class="text2">Tvoríme digitálny svet krásy a účinnosti</div>
+        <div class="text fade-in-right">Kreatívna myseľ, nekonečné možnosti</div>
+        <div class="text2 fade-in-right">Tvoríme digitálny svet krásy a účinnosti</div>
         <!-----------1.-------->
         <div class="mySlides">
             <img alt="ENCORE the club negroni cocktail" class="sliderimg" src="../image/slider/jp-negroni.webp">
@@ -358,7 +358,7 @@
             </div>
             <div class="modal-port">
                 <span class="close-proj">&times;</span>
-                <img alt="modal" class="modalImage" id="img01"/>
+                <img src="" alt="modal" class="modalImage" id="img01"/>
             </div>
         </div>
     </section>
@@ -623,6 +623,8 @@
 <script src="../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../js/project-gallery.js" type="text/javascript"></script>
 <script src="../js/skill-bar.js" type="text/javascript"></script>
+<script src="../js/fade-in-right.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/43bb1ab4a5477adb533baeec0/dbecbabf32187374f6e2569b8.js");</script>
 </body>
 </html>
