JP GENERATION - Animation site

--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -29,6 +29,7 @@
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
 <!-------------NAV MENU--------------->
@@ -95,8 +96,8 @@
 <!-------------PHOTO SLIDER--------------->
 <section class="slider">
     <div class="slideshow-container">
-        <div class="text fade-in-right">Kreatívna myseľ, nekonečné možnosti</div>
-        <div class="text2 fade-in-right">Tvoríme digitálny svet krásy a účinnosti</div>
+        <div class="text">Kreatívna myseľ, nekonečné možnosti</div>
+        <div class="text2">Tvoríme digitálny svet krásy a účinnosti</div>
         <!-----------1.-------->
         <div class="mySlides">
             <img alt="ENCORE the club negroni cocktail" class="sliderimg" src="../image/slider/jp-negroni.webp">
@@ -198,15 +199,17 @@
 <br>
 <!-------------SERVICES-------------->
 <section class="services">
-    <header class="headline-con">
-        <div class="con-main">
-            <div class="line-con1"></div>
-            <div class="spacer"></div>
+    <div class="con-head">
+        <header class="headline-con">
+            <div class="con-main">
+                <div class="line-con1"></div>
+                <div class="spacer"></div>
+            </div>
+            <h2>Služby</h2>
+        </header>
+        <div class="con-look">
+            <span>Menší náhľad čo Vám vieme poskytnúť</span>
         </div>
-        <h2>Služby</h2>
-    </header>
-    <div class="con-look">
-        <span>Menší náhľad čo Vám vieme poskytnúť</span>
     </div>
     <section class="content1">
         <div class="white">
@@ -262,15 +265,17 @@
 <br>
 <!-------------PROJECT-------------->
 <section class="project">
-    <header class="headline-con">
-        <div class="con-main">
-            <div class="line-con1"></div>
-            <div class="spacer"></div>
+    <div class="proj-head">
+        <header class="headline-con">
+            <div class="con-main">
+                <div class="line-con1"></div>
+                <div class="spacer"></div>
+            </div>
+            <h2>Projekty</h2>
+        </header>
+        <div class="con-look">
+            <span>Menší náhľad ako môže vyzerať aj Váš projekt</span>
         </div>
-        <h2>Projekty</h2>
-    </header>
-    <div class="con-look">
-        <span>Menší náhľad ako môže vyzerať aj Váš projekt</span>
     </div>
     <section class="photo-galery">
         <div class="gallery" id="gallery">
@@ -623,8 +628,8 @@
 <script src="../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../js/project-gallery.js" type="text/javascript"></script>
 <script src="../js/skill-bar.js" type="text/javascript"></script>
-<script src="../js/fade-in-right.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
+<script src="../js/fade-in-up-and-left.js" type="text/javascript"></script>
 <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/43bb1ab4a5477adb533baeec0/dbecbabf32187374f6e2569b8.js");</script>
 </body>
 </html>
