JP GENERATION - Animation site

--- a/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
@@ -427,6 +427,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
+<script src="../../js/fade-in-up-left.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
