--- a/plne-responzivny-web/jpgeneration/gdpr.html
+++ b/plne-responzivny-web/jpgeneration/gdpr.html
@@ -404,6 +404,7 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../js/nav.js" type="text/javascript"></script>
 <script src="../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../js/fade-in-up-left.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
