--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -96,8 +96,10 @@
 <!-------------PHOTO SLIDER--------------->
 <section class="slider">
     <div class="slideshow-container">
-        <div class="text">Kreatívna myseľ, nekonečné možnosti</div>
-        <div class="text2">Tvoríme digitálny svet krásy a účinnosti</div>
+        <div class="text-all">
+            <div class="text">Kreatívna myseľ, nekonečné možnosti</div>
+            <div class="text2">Tvoríme digitálny svet krásy a účinnosti</div>
+        </div>
         <!-----------1.-------->
         <div class="mySlides">
             <img alt="ENCORE the club negroni cocktail" class="sliderimg" src="../image/slider/jp-negroni.webp">
@@ -373,16 +375,21 @@
 <!-------------SKILL LIST-------------->
 <section class="skill-list">
     <section class="abilites">
-        <header class="headline-con">
-            <div class="con-main">
-                <div class="spacer"></div>
+        <div class="skill-head">
+            <header class="headline-con">
+                <div class="con-main">
+                    <div class="spacer"></div>
+                </div>
+                <h2 class="skills">Tu sú nejaké naše zručnosti</h2>
+            </header>
+            <div class="skill-text">
+                Dokonalosť je neustálym úsilím. Nezakrývame, že sme odborníci na všetko na 100%. No práve táto skromnosť
+                a
+                odhodlanie nás vyznačuje. Vždy sme pripravení sa učiť nové veci a prekvapiť vás. Preto, ak si myslíte,
+                že
+                niečo nie je možné, vedzte, že pre nás to znamená len novú výzvu. Spolu objavíme, čo sme schopní
+                dosiahnuť.
             </div>
-            <h2 class="skills">Tu sú nejaké naše zručnosti</h2>
-        </header>
-        <div class="skill-text">
-            Dokonalosť je neustálym úsilím. Nezakrývame, že sme odborníci na všetko na 100%. No práve táto skromnosť a
-            odhodlanie nás vyznačuje. Vždy sme pripravení sa učiť nové veci a prekvapiť vás. Preto, ak si myslíte, že
-            niečo nie je možné, vedzte, že pre nás to znamená len novú výzvu. Spolu objavíme, čo sme schopní dosiahnuť.
         </div>
         <section class="skill-list">
             <div class="container-skill">
@@ -629,7 +636,7 @@
 <script src="../js/project-gallery.js" type="text/javascript"></script>
 <script src="../js/skill-bar.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
-<script src="../js/fade-in-up-and-left.js" type="text/javascript"></script>
+<script src="../js/fade-in-up-left.js" type="text/javascript"></script>
 <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/43bb1ab4a5477adb533baeec0/dbecbabf32187374f6e2569b8.js");</script>
 </body>
 </html>
