--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -377,7 +377,8 @@
     <!-------------COPYRIGHT-------------->
     <section class="copy-write">
         <div class="copy-box">
-            <p>2023 © All rights reserved. Website by <a class="text-link" href="https://www.jpgeneration.sk">JP GENERATION</a>.</p>
+            <p>2023 © All rights reserved. Website by <a class="text-link" href="https://www.jpgeneration.sk">JP
+                GENERATION</a>.</p>
         </div>
     </section>
 </footer>
@@ -387,6 +388,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
+<script src="../../js/fade-in-up-left.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
