--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -32,6 +32,7 @@
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
 <!-------------NAV MENU--------------->
@@ -97,16 +98,16 @@
 </section>
 <!-------------ZACIATOK CONTENTU-------------->
 <section class="port-foto">
-    <header class="headline-con">
-        <div class="con-main">
-            <div class="line-con1"></div>
-            <div class="spacer"></div>
+        <header class="headline-con">
+            <div class="con-main">
+                <div class="line-con1"></div>
+                <div class="spacer"></div>
+            </div>
+            <h2>Portfólio - fotky</h2>
+        </header>
+        <div class="con-look">
+            <span>Vaša realizácia služby môže vyzerať takto</span>
         </div>
-        <h2>Portfólio - fotky</h2>
-    </header>
-    <div class="con-look">
-        <span>Vaša realizácia služby môže vyzerať takto</span>
-    </div>
 </section>
 <!-------------PORTFOLIO FOTO GALLERY-------------->
 <section class="gallery-port">
