JP GENERATION - Animation site

--- a/plne-responzivny-web/jpgeneration/cennik/cena-sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-sprava-domeny-a-hostingu.html
@@ -111,7 +111,7 @@
             </button>
         </div>
     </header>
-    <div class="con-look">
+    <div class="con-look-ser">
         <span>Cena za vašu správu domény a hostingu</span>
     </div>
     <section class="content-price-1">
