--- a/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
@@ -105,7 +105,7 @@
         </div>
         <h2>Kto vlastne sme</h2>
     </header>
-    <div class="con-look">
+    <div class="con-look-ser">
         <span>Digitálna generácia založená v roku 2023</span>
     </div>
     <section class="about-us">
@@ -164,7 +164,7 @@
         </div>
         <h2>Náš tím</h2>
     </header>
-    <div class="con-look">
+    <div class="con-look-ser">
         <span>Skúsení tvorcovia, ktorí premenia vašu víziu na skutočnosť</span>
     </div>
     <section class="photo-team">
