--- a/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
@@ -105,7 +105,7 @@
         </div>
         <h2>Zákazníci</h2>
     </header>
-    <div class="con-look">
+    <div class="con-look-ser">
         <span>Firmy a značky, ktoré na nás spoliehajú a využili naše profesionálne služby</span>
     </div>
     <div class="zak-text">
