--- a/plne-responzivny-web/jpgeneration/cennik/cena-wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-wordpress-web.html
@@ -111,7 +111,7 @@
             </button>
         </div>
     </header>
-    <div class="con-look">
+    <div class="con-look-ser">
         <span>Cena za váš wordpress web</span>
     </div>
     <section class="content-price-1">
