JP GENERATION - Animation site

--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -1337,7 +1337,8 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/portfol-fotky.js" type="text/javascript"></script>
-<script src="../../js/fade-in-up-left.js" type="text/javascript"></script>
+<script src="../../js/fade-in-up-left-scroll.js" type="text/javascript"></script>
+<script src="../../js/fade-in-up-left-load.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
