--- a/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
@@ -388,7 +388,8 @@ Ake formáty a akú kvalitu videa poskytujeme pre rôzne platformy?</span>
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
-<script src="../../js/fade-in-up-left.js" type="text/javascript"></script>
+<script src="../../js/fade-in-up-left-scroll.js" type="text/javascript"></script>
+<script src="../../js/fade-in-up-left-load.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
