--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -636,7 +636,8 @@
 <script src="../js/project-gallery.js" type="text/javascript"></script>
 <script src="../js/skill-bar.js" type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
-<script src="../js/fade-in-up-left.js" type="text/javascript"></script>
+<script src="../js/fade-in-up-left-scroll.js" type="text/javascript"></script>
+<script src="../js/fade-in-up-left-load.js" type="text/javascript"></script>
 <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/43bb1ab4a5477adb533baeec0/dbecbabf32187374f6e2569b8.js");</script>
 </body>
 </html>
